--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       font-weight: 500;      /* optional: gives a bit more presence */
     }
     .planned::before {
-      content: "[planned ";
+      content: "[";
     }
     .planned::after {
       content: "]";
@@ -251,7 +251,7 @@ ul li > .planned {
 ul li > .date::before { content: "["; }
 ul li > .date::after  { content: "]"; }
 ul li > .planned { color: #B088FF; }
-ul li > .planned::before { content: "[planned "; }
+ul li > .planned::before { content: "["; }
 ul li > .planned::after  { content: "]"; }
 
 /* --- Talks sublist (keeps your existing sub-bullet layout) --- */
@@ -436,7 +436,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>APS Steven Chu Award for Best Undergraduate Research (1st)</strong> — first place prize among all undergraduate research presented at the American Physical Society's 2025 meeting of the Far West Section (includes CA, NV, HI)
         </span>
-        <span class="date">October 2025</span>
+        <span class="date">Oct.</span>
       </span>
     </li>
 
@@ -445,7 +445,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>UCLA Undergraduate Research Scholars Program (URSP)</strong> — year-long research scholarship
         </span>
-        <span class="date">2025 - 2026</span>
+        <span class="date">25 - 26</span>
       </span>
     </li>
 
@@ -454,7 +454,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — first undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics
         </span>
-        <span class="date">August 2025</span>
+        <span class="date">Aug.</span>
       </span>
     </li>
 
@@ -463,7 +463,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program
         </span>
-        <span class="date">June 2025</span>
+        <span class="date">June</span>
       </span>
       <ul>
         <li>
@@ -481,7 +481,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in theoretical physics coursework
         </span>
-        <span class="date">May 2025</span>
+        <span class="date">May</span>
       </span>
     </li>
   </ul>
@@ -493,7 +493,7 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship
         </span>
-        <span class="date">Summer 2024</span>
+        <span class="date">Summer</span>
       </span>
     </li>
   </ul>
@@ -535,7 +535,7 @@ ul li > .planned::after  { content: "]"; }
         <li>
           <div class="row">
             <span class="item-text">California Amplitudes Meeting 2025 (LA), UCLA</span>
-            <span class="date">November 8, 2025</span>
+            <span class="date">Nov. 8, 2025</span>
           </div>
         </li>
       </ul>
@@ -546,7 +546,7 @@ ul li > .planned::after  { content: "]"; }
         <li>
           <div class="row">
             <span class="item-text"><span style="color: rgb(25, 181, 46);">(invited)</span> Research Experiences for Undergraduates (REU) Special Seminar, UCLA</span>
-            <span class="date">August 15, 2025</span>
+            <span class="date">Aug. 15, 2025</span>
           </div>
         </li>
       </ul>
@@ -557,13 +557,13 @@ ul li > .planned::after  { content: "]"; }
         <li>
           <div class="row">
             <span class="item-text">UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan</span>
-            <span class="date">August 5, 2025</span>
+            <span class="date">Aug. 5, 2025</span>
           </div>
         </li>
         <li>
           <div class="row">
             <span class="item-text"><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span></span>
-            <span class="date">October 11, 2025</span>
+            <span class="date">Oct. 11, 2025</span>
           </div>
         </li>
       </ul>
@@ -574,7 +574,7 @@ ul li > .planned::after  { content: "]"; }
         <li>
           <div class="row">
             <span class="item-text"><a href="https://meetings.aps.org/Meeting/DPP24/Session/NO05.14">APS Division of Plasma Physics</a>, Atlanta, Georgia</span>
-            <span class="date">October 9, 2024</span>
+            <span class="date">Oct. 9, 2024</span>
           </div>
         </li>
       </ul>
@@ -604,21 +604,21 @@ ul li > .planned::after  { content: "]"; }
     <li>
       <span class="li-row">
         <span class="li-text"><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado</span>
-        <span class="planned">March 2026</span>
+        <span class="planned">Mar. 2026</span>
       </span>
     </li>
 
     <li>
       <span class="li-row">
         <span class="li-text"><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany</span>
-        <span class="planned">December 2025</span>
+        <span class="planned">Dec. 2025</span>
       </span>
     </li>
 
     <li>
       <span class="li-row">
         <span class="li-text"><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA</span>
-        <span class="date">November 2025</span>
+        <span class="date">Nov. 2025</span>
       </span>
     </li>
 
@@ -628,14 +628,14 @@ ul li > .planned::after  { content: "]"; }
           <strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz
           <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span>
         </span>
-        <span class="date">October 2025</span>
+        <span class="date">Oct. 2025</span>
       </span>
     </li>
 
     <li>
       <span class="li-row">
         <span class="li-text"><strong>2025 Southern California Strings</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA</span>
-        <span class="date">October 2025</span>
+        <span class="date">Oct. 2025</span>
       </span>
     </li>
 
@@ -649,7 +649,7 @@ ul li > .planned::after  { content: "]"; }
     <li>
       <span class="li-row">
         <span class="li-text"><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia</span>
-        <span class="date">October 2024</span>
+        <span class="date">Oct. 2024</span>
       </span>
     </li>
   </ul>
