steven chu award link

--- a/index.html
+++ b/index.html
@@ -665,8 +665,8 @@ ul li > .planned::after  { content: "]"; }
   <ul>
     <li>
       <span class="li-row">
-        <span class="li-text"><strong>APS Steven Chu Award for Best Undergraduate Research</strong></span>
-        <span class="planned">TBA</span>
+        <span class="li-text"><strong><a href="https://shorturl.at/Izqlv">APS Steven Chu Award for Best Undergraduate Research</a></strong></span>
+        <span class="date">October 2025</span>
       </span>
     </li>
 
