add steven chu image

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@ ul li > .planned::after  { content: "]"; }
         <div class="slide"><img src="images/gallery/aps_dpp_66.JPG" alt="Gallery image 2" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/utrip_yasuda.JPEG" alt="Gallery image 3" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/utrip_advisor.jpg" alt="Gallery image 5" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/steven_chu_certificate.jpg" alt="Gallery image 7" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/ucla_reu_invited_title.JPG" alt="Gallery image 6" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/utrip_welcome_group.JPEG" alt="Gallery image 4" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/ucla_reu_invited_eft.jpg" alt="Gallery image 7" loading="lazy" onerror="this.style.display='none'" /></div>
