added january 2026 updates

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ ul li > .planned::after  { content: "]"; }
 <main class="page">
   <section id="summary">
     <h2>About</h2>
-    <p style="text-align: justify; text-indent: 2em;">Samuel Degen is a third-year physics major and URSP Scholar at UCLA researching theoretical frameworks that connect quantum field theory, gravity, and nuclear physics. His projects at UCLA and the University of Tokyo aim to improve theoretical predictions for next-generation gravitational wave and ultracold atom experiments using powerful effective methods from quantum field theory. Samuel has presented his work internationally and received multiple fellowships recognizing his independent contributions. He is deeply committed to mentorship and accessibility in science and plans to continue fostering these values as he pursues a career in academia.</p>
+    <p style="text-align: justify; text-indent: 2em;">Samuel Degen is a third-year physics major and Goldwater Nominee at UCLA researching theoretical frameworks that connect quantum field theory, gravity, and nuclear physics. His projects at UCLA and the University of Tokyo aim to improve theoretical predictions for next-generation gravitational wave and ultracold atom experiments using powerful effective methods from quantum field theory. Samuel has presented his work internationally and received multiple fellowships recognizing his independent contributions. He is deeply committed to mentorship and accessibility in science and plans to continue fostering these values as he pursues a career in academia.</p>
   </section>
 
   <!-- GALLERY: center-peek, wraps 1→2→3→4→1 ... with cloned ends -->
@@ -399,7 +399,7 @@ ul li > .planned::after  { content: "]"; }
         </li>
         <li>
           <span class="li-row">
-            <span class="li-text">GPA: 3.984 overall; 4.0 major</span>
+            <span class="li-text">GPA: 3.986 overall; 4.0 major</span>
           </span>
         </li>
       </ul>
@@ -429,6 +429,18 @@ ul li > .planned::after  { content: "]"; }
   
 <section id="honors">
   <h2>Honors &amp; Awards</h2>
+
+  <h3>2026</h3>
+  <ul>
+    <li>
+      <span class="li-row">
+        <span class="li-text">
+          <strong>UCLA Nominee for Goldwater Scholarship</strong> — 1 of 4 students nominated by UCLA
+        </span>
+        <span class="date">Jan.</span>
+      </span>
+    </li>
+  </ul>
 
   <h3>2025</h3>
   <ul>
@@ -604,6 +616,13 @@ ul li > .planned::after  { content: "]"; }
   <ul>
     <li>
       <span class="li-row">
+        <span class="li-text"><strong>GWSky Workshop: “Precision Gravitational Wave Astronomy: From Theory to Discovery”</strong> — Sexten Center for Astrophysics Riccardo Giacconi, Italy</span>
+        <span class="planned">July 2026</span>
+      </span>
+    </li>
+
+    <li>
+      <span class="li-row">
         <span class="li-text"><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado</span>
         <span class="planned">Mar. 2026</span>
       </span>
@@ -612,7 +631,7 @@ ul li > .planned::after  { content: "]"; }
     <li>
       <span class="li-row">
         <span class="li-text"><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany</span>
-        <span class="planned">Dec. 2025</span>
+        <span class="date">Dec. 2025</span>
       </span>
     </li>
 
@@ -667,14 +686,21 @@ ul li > .planned::after  { content: "]"; }
     <li>
       <span class="li-row">
         <span class="li-text"><strong><a href="https://shorturl.at/Izqlv">APS Steven Chu Award for Best Undergraduate Research</a></strong></span>
-        <span class="date">October 2025</span>
+        <span class="date">10 / 2025</span>
       </span>
     </li>
 
     <li>
       <span class="li-row">
-        <span class="li-text"><strong>FUTI Global Leadership Award</strong></span>
-        <span class="planned">TBA</span>
+        <span class="li-text"><strong><a href="https://www.friendsofutokyo.org/en/university-of-tokyos-quark-nuclear-science-institute/"> FUTI Global Leadership Award</a></strong></span>
+        <span class="date">8 / 2025</span>
+      </span>
+    </li>
+
+    <li>
+      <span class="li-row">
+        <span class="li-text"><strong><a href="https://www.s.u-tokyo.ac.jp/en/utrip/archive/2025/overview/"> University of Tokyo Research Internship Program</a></strong> ( <a href="https://www.s.u-tokyo.ac.jp/en/utrip/archive/2025/research-projects/">final report</a> )</span>
+        <span class="date">6 / 2025</span>
       </span>
     </li>
 
@@ -683,13 +709,21 @@ ul li > .planned::after  { content: "]"; }
         <span class="li-text">
           <strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong>
         </span>
-        <span class="date">May 2025</span>
+        <span class="date">5 / 2025</span>
       </span>
     </li>
   </ul>
 
   <h3>Activities</h3>
   <ul>
+    <li>
+      <span class="li-row">
+        <span class="li-text">
+          <strong>Peer Mentor</strong>, Division of Physical Sciences, UCLA — provided first-year physical science students guidance on coursework, professional development, fellowships, and early research opportunities, especially for those interested in theoretical physics
+        </span>
+      </span>
+    </li>
+
     <li>
       <span class="li-row">
         <span class="li-text">
@@ -701,7 +735,7 @@ ul li > .planned::after  { content: "]"; }
     <li>
       <span class="li-row">
         <span class="li-text">
-          <strong>Teaching Assistant Training</strong>, UCLA Physics — only undergraduate trained as TA; appointments pending improved department funding
+          <strong>Teaching Assistant Training</strong>, Department of Physics & Astronomy, UCLA — only undergraduate trained as TA; appointments pending improved department funding
         </span>
       </span>
     </li>
