change bio to first person

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ ul li > .planned::after  { content: "]"; }
 <main class="page">
   <section id="summary">
     <h2>About</h2>
-    <p style="text-align: justify; text-indent: 2em;">Samuel Degen is a third-year physics major and Goldwater Nominee at UCLA researching theoretical frameworks that connect quantum field theory, gravity, and nuclear physics. His projects at UCLA and the University of Tokyo aim to improve theoretical predictions for next-generation gravitational wave and ultracold atom experiments using powerful effective methods from quantum field theory. Samuel has presented his work internationally and received multiple fellowships recognizing his independent contributions. He is deeply committed to mentorship and accessibility in science and plans to continue fostering these values as he pursues a career in academia.</p>
+    <p style="text-align: justify; text-indent: 2em;">I am a third-year physics major and Goldwater Nominee at UCLA pursuing theoretical research at the intersection of quantum field theory, gravity, and nuclear physics. My work at UCLA and the University of Tokyo uses powerful effective methods to connect fundamental theory with experimentally relevant problems, including next-generation gravitational wave and ultracold atom experiments. I have presented my research internationally and received multiple competitive fellowships recognizing my independent contributions. Alongside research, I am deeply committed to mentorship and accessibility in science, and I aim to carry these values forward as I pursue a career as an academic researcher and educator.</p>
   </section>
 
   <!-- GALLERY: center-peek, wraps 1→2→3→4→1 ... with cloned ends -->
