added CAmplitudes link

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ ul li > .planned::after  { content: "]"; }
       <ul>
         <li>
           <span class="li-row">
-            <span class="li-text">B.S. Physics &amp; Mathematics</span>
+            <span class="li-text">B.S. Physics</span>
             <span class="date">2023 – Present</span>
           </span>
         </li>
@@ -629,7 +629,7 @@ ul li > .planned::after  { content: "]"; }
       <ul class="talks-sublist">
         <li>
           <div class="row">
-            <span class="item-text">California Amplitudes Meeting 2025 (LA), UCLA</span>
+            <span class="item-text"><a href="https://tinyurl.com/3vymyh3n">California Amplitudes Meeting 2025 (LA)</a>, UCLA</span>
             <span class="date">Nov. 8, 2025</span>
           </div>
         </li>
